# BushfireReadyGPT

./: .env.example  .gitignore  README.md  Start BushfireReadyGPT.bat  pyproject.toml  requirements.txt  start_app.ps1
data_australia/: README.md  community_profile_sample.csv  licence_register.yml  official_sources.yml  region_mappings.yml  risk_context_rules.yml
data_australia/processed/: community_profiles.csv
docs/: README.md  architecture.md  commercial_gap_assessment.md  commercial_readiness_checklist.md  demo_guide.md  demo_scenarios.md  demo_script.md  demo_walkthrough.md  legacy_cleanup_plan.md  licence_register.md  pilot_feedback_form.md  pilot_pitch.md  project_overview.md  project_reassessment.md  showcase_checklist.md  showcase_package.md
examples/: README.md  cairns_campus_bushfire_report.md
scripts/: download_abs_asgs_allocations.py  download_abs_community_profiles.py  download_abs_sa2_all.py
src/: app_catalog.py  app_state.py  audit.py  config.py  coverage_map.py  data_register.py  data_status.py  docx_export.py  export_package.py  licence_register.py  official_status.py  pdf_export.py  report_template.py  report_workflow.py  session_store.py  utils.py  wildfireChat.py
src/agents/: __init__.py  australian_data_agent.py  community_vulnerability_agent.py  pipeline.py  planner_agent.py  profile_agent.py  report_agent.py  report_quality_agent.py  risk_context_agent.py
src/assistants/: assistant.py  assistant_router.py
src/ui/: __init__.py  components.py  data_views.py  demo_views.py  layout.py  (+5 more)
tests/: __init__.py  test_core_pipeline.py
(+7 files in other folders)
