[tool.poetry]
name = "bushfire-ready-gpt"
version = "0.1.0"
description = "Australian bushfire resilience assistant prototype"
authors = ["Yangxinyu <xinyux@wharton.upenn.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
openai = ">=2.0,<3.0"
python-dotenv = ">=1.0,<2.0"
streamlit = ">=1.57,<2.0"
requests = ">=2.31,<3.0"
pyyaml = ">=6.0,<7.0"
pandas = ">=2.0,<4.0"
numpy = ">=1.26,<3.0"
pydeck = ">=0.9,<1.0"
clipboard = ">=0.0.4,<1.0"
reportlab = ">=4.5,<5.0"
python-docx = ">=1.2,<2.0"

[tool.poetry.group.dev.dependencies]
ipykernel = ">=6.29,<7.0"
pytest = ">=8.0,<10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
